tests/fixtures/invalid/pow_5_args.py
# pow() takes at most 3 arguments, got 5
x = pow(1, 1, 1, 1, 1)
